# pytex

./: .gitignore  README.md  pyproject.toml
src/pitex/: __init__.py
src/pytex/: __init__.py  config.py  document.py
