[tool.poetry]
name = "pitex"
version = "1.0.1"
description = ""
authors = ["girogio <giorgiogrigolo03@gmail.com>"]
readme = "README.md"
packages = [{ include = "pitex", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
